--- a/resources/sass/nobleui/_sidebar.scss
+++ b/resources/sass/nobleui/_sidebar.scss
@@ -180,13 +180,14 @@
         }
       }
       &.sub-menu {
-        padding: 0 0 15px 33px;
+        padding: 0 0 15px 43px;
+        list-style: none;
         .nav-item {
           position: relative;
           .nav-link {
-            height: 26px;
+            height: 32px;
             color: var(--#{$prefix}sidebar-color);
-            // font-size: 13px;
+            padding-left: 5px;
             -webkit-transition: all .1s ease-in-out;
             transition: all .1s ease-in-out;
             &::before {
@@ -197,8 +198,9 @@
               background: transparent;
               border: 1px solid rgba(var(--#{$prefix}sidebar-color-rgb), .3);
               position: absolute;
-              left: -29px;
-              top: 10px;
+              left: -18px;
+              top: 50%;
+              transform: translateY(-50%);
               -webkit-transition: all .1s ease-in-out;
               transition: all .1s ease-in-out;
             }
